import {Position} from "./position";
import {Piece} from "./piece";

export class Chessboard {


    public constructor() {

    }

    public getPiece(position: Position): Piece {
        return new Piece(this)
}
}
