@startuml

class Position {
    + row: int
    + col: int
}
class Movement {
    + from: Position
    + to: Position
}
Movement o-- Position


interface PositionProvider {
    + getPosition(piece: Piece) -> Position
}


class ChessBoard{
    + move(movement: Movement)
}

ChessBoard ..|> PositionProvider

class Piece{
}
Piece --> PositionProvider


ChessBoard *-- Piece
ChessBoard --> Movement


class Player {
    + getInput() -> Movement
}

Player --> Movement


class Controller {
    - playerWhite: Player
    - playerBlack: Player
    - currentPlayer: Player
    - changePlayer()
    + runRound()
    + run()
}


Controller o-- ChessBoard
Controller o-- Player
@enduml
